2008-10-31  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs:
	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 439963 - Lacking
	members in code completion'

2008-10-31  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed possible null reference.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewCSharpExpressionFinder.cs:
	* Gui/CSharpTextEditorCompletion.cs: worked on "new" completion.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/NewCSharpExpressionFinder.cs: Worked on "new" completion.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 432438 - Incorrect
	autocomplete for delegates'.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs: Fixed 'Bug 432434 - Code completion
	doesn't work with subclasses'.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 436312 - Couldn't deal
	well with elements which have generic and non-generic presence at the
	same time'.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed  duplicate member bug.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 436705 - code completion
	for constructors does not handle class name collisions properly'.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: using type reference parsing for object
	creation.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 432434 - Code completion
	doesn't work with subclasses'.

2008-10-29  Lluis Sanchez Gual  <lluis@novell.com>
